--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,11 @@
-astroid==2.2.5
-bash==0.6
-bson==0.5.8
-certifi==2019.6.16
-chardet==3.0.4
-Click==7.0
-colorama==0.4.1
 dj-database-url==0.5.0
 Django==2.2
-django-filter==2.2.0
+django-custom-auth-user==0.1.2
 django-forms-bootstrap==3.1.0
-dnspython==1.16.0
-env==0.1.0
-Flask==1.0.3
-Flask-PyMongo==2.3.0
-gunicorn==19.9.0
-heroku==0.1.4
-idna==2.8
-isort==4.3.18
-itsdangerous==1.1.0
-Jinja2==2.10.1
-lazy-object-proxy==1.3.1
-MarkupSafe==1.1.1
-mccabe==0.6.1
-pillow>=6.2.2
-psycopg2==2.8.3
-pylint==2.3.1
-pymongo==3.8.0
-python-dateutil==1.5
-pytz==2019.2
-requests==2.22.0
-six==1.12.0
-sqlparse==0.3.0
-stripe==2.36.1
-typed-ast==1.3.5
-urllib3==1.25.3
-Werkzeug==0.15.4
-whitenoise==4.1.3
-wrapt==1.11.1
+gunicorn==20.0.4
+Pillow==7.1.2
+psycopg2==2.8.5
+pytz==2020.1
+sqlparse==0.3.1
+stripe==2.47.0
+whitenoise==5.0.1
