--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
+boto3==1.13.4
+botocore==1.16.4
 dj-database-url==0.5.0
 Django==2.2
 django-custom-auth-user==0.1.2
 django-forms-bootstrap==3.1.0
+django-storages==1.9.1
+docutils==0.15.2
 gunicorn==20.0.4
+jmespath==0.9.5
 Pillow==7.1.2
 psycopg2==2.8.5
 pytz==2020.1
+s3transfer==0.3.3
 sqlparse==0.3.1
 stripe==2.47.0
 whitenoise==5.0.1
