--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-*.sqlite3*
+*.sqlite3
 *.pyc
 .~c9
 __pycache__/
@@ -6,4 +6,4 @@ db.json
 env.py
 node_modules
 db.sqlite3
-/env/*
+/env/*db.sqlite3
