--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+antiorm==1.2.1
 boto3==1.13.4
 botocore==1.16.4
+db==0.1.1
+db-sqlite3==0.0.1
 dj-database-url==0.5.0
 Django==2.2
 django-custom-auth-user==0.1.2
